--- a/js-dom-2/exercise-1/index.html
+++ b/js-dom-2/exercise-1/index.html
@@ -9,10 +9,14 @@
     <input id="fullname" type="text" placeholder="Full Name" />
     <input id="nickname" type="text" placeholder="NickName" />
     <button onClick="// your function when click!">Submit</button>
-    <h1 id="h1e">Welcome Kanin James</h1>
+    <h1 id="h1">Welcome Kanin James</h1>
+
+    <input id="fullname" type="text" placeholder="Full Name" />
+    <button onClick="welcome()">Submit</button>
   </body>
   <script type="text/javascript">
-    // write your own function here
-    // write code here
+    const welcome = () => {
+      const fullname = document.querySelector("#fullname").value;
+      alert("Welcome " + fullname);
   </script>
 </html>
