--- a/js-dom-2/exercise-1/index.html
+++ b/js-dom-2/exercise-1/index.html
@@ -8,15 +8,16 @@
   <body>
     <input id="fullname" type="text" placeholder="Full Name" />
     <input id="nickname" type="text" placeholder="NickName" />
-    <button onClick="// your function when click!">Submit</button>
-    <h1 id="h1">Welcome Kanin James</h1>
-
-    <input id="fullname" type="text" placeholder="Full Name" />
     <button onClick="welcome()">Submit</button>
+    <h1 id="h1"></h1>
   </body>
   <script type="text/javascript">
     const welcome = () => {
       const fullname = document.querySelector("#fullname").value;
-      alert("Welcome " + fullname);
+      const nickname = document.querySelector("#nickname").value;
+      //alert("Welcome " + fullname +"," + nickname );
+      //document.getElementById("h1").innerHTML = "Welcome " + fullname +" , " + nickname ;
+      document.querySelector("#h1").innerHTML = "Welcome " + fullname +" , " + nickname ;
+    }
   </script>
 </html>
